--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.28.0
-pandas==2.1.0
-plotly==5.17.0
-openpyxl==3.1.2
+streamlit>=1.36.0
+pandas>=2.2.0
+plotly>=5.20.0
+openpyxl>=3.1.5
 python-dateutil==2.8.2
 numpy==1.24.3
 pillow==10.0.0
