--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit>=1.36.0
-pandas>=2.2.0
-plotly>=5.20.0
-openpyxl>=3.1.5
+streamlit
+pandas
+plotly
+openpyxl
 python-dateutil==2.8.2
 numpy==1.24.3
 pillow==10.0.0
